# tempeh

./: .gitignore  README.md  copilot-instructions.md  docker-compose.yml  tempeh.cabal
.github/: copilot-instructions.md
app/: Main.hs
config/: global.json  local.json.template  test.json
config/promtail/: config.yml
docs/IG/: REFACTORING_GUIDE.md  REST.md  TLCP.md  streaming.md
docs/adr/: ADR-001-architectural-improvements.md  ADR-002-IG-broker-integration.md  ADR-003-tlcp-library-extraction.md  ADR-004-ig-adapter-refactoring.md  ADR-005-ig-adapter-optimization.md  ADR-006-monitoring-and-observability.md
docs/lightstreamer/: docs.md
src/Adapter/: BacktestEngine.hs  BrokerDataProvider.hs  CsvDataProvider.hs  ReportGeneratorAdapter.hs  RiskManagerAdapter.hs  SimBroker.hs  StrategyFactory.hs
src/Adapter/BrokerDataProvider/: Migration.hs  Refactored.hs
src/Adapter/IG/: Auth.hs  BrokerAdapter.hs  Connection.hs  Deals.hs  Error.hs  Polling.hs  Session.hs  Streaming.hs  Trading.hs  Types.hs
src/Application/: BacktestOrchestrator.hs  CLI.hs  Env.hs  LiveTradingOrchestrator.hs  Main.hs  Migration.hs  ReportingService.hs
src/Application/Strategy/: Factory.hs  Registry.hs  Types.hs
src/Backtest/: CandleAggregator.hs  CsvTickLoader.hs  Engine.hs  Report.hs
src/Debug/: StrategyAnalyzer.hs
src/Domain/: Broker.hs  Strategy.hs  Types.hs
src/Domain/Services/: BacktestService.hs  LiveDataService.hs
src/Port/: Broker.hs  DataProvider.hs  Strategy.hs
src/Runner/: BacktestMain.hs  SimMain.hs
src/Strategy/: BollingerBands.hs  Config.hs  EmaCross.hs  RSI.hs  TimingTest.hs
src/Util/: Config.hs  Error.hs  FakeData.hs  Logger.hs
test/: Main.hs
test/e2e/: CompleteBacktestTest.hs  LiveTradingE2ETest.hs
test/integration/: BacktestIntegrationTest.hs  LiveTradingExecutionTest.hs  LiveTradingIntegrationTest.hs  StrategyComparisonTest.hs
test/integration/Adapter/IG/: DealsIntegrationTest.hs
test/unit/Adapter/: BacktestEngineTest.hs  BrokerDataProviderTest.hs  CsvDataProviderTest.hs  RiskManagerTest.hs  SimBrokerTest.hs
test/unit/Adapter/IG/: BrokerAdapterTest.hs  ConnectionTest.hs  DealsTest.hs  ErrorTest.hs  PollingTest.hs  SessionTest.hs  StreamingTest.hs  TradingTest.hs
test/unit/Application/: CLITest.hs  LiveTradingOrchestratorTest.hs
test/unit/Domain/: LiveDataServiceTest.hs  ServicesTest.hs  TypesTest.hs
test/unit/Strategy/BollingerBands/: IndicatorsTest.hs  StrategyTest.hs
test/unit/Strategy/EmaCross/: IndicatorsTest.hs  StrategyTest.hs
test/unit/Strategy/RSI/: IndicatorsTest.hs  StrategyTest.hs
test/unit/Strategy/TimingTest/: StrategyTest.hs
test/unit/Util/: ConfigTest.hs  ErrorTest.hs  LoggerTest.hs
