cabal-version:       1.24
name:                tempeh
version:             0.1.0.0
build-type:          Simple

library
  hs-source-dirs:      src
  exposed-modules:
    -- Domain Layer (Pure Business Logic)
      Domain.Types
    , Domain.Strategy
    , Domain.Services.BacktestService

    -- Application Layer (Orchestration & Services)
    , Application.BacktestOrchestrator
    , Application.Main
    , Application.ReportingService

    -- Adapters Layer (Infrastructure)
    , Adapter.CsvDataProvider
    , Adapter.BacktestEngine
    , Adapter.StrategyFactory
    , Adapter.ReportGeneratorAdapter
    , Adapter.RiskManagerAdapter

    -- Strategy Implementations
    , Strategy.EmaCross
    , Strategy.Config

    -- Utilities
    , Util.Config
    , Util.Error
    , Util.Logger

    -- Debug tools
    , Debug.StrategyAnalyzer

  build-depends:
      base >=4.14 && <5
    , scientific
    , time
    , stm
    , text
    , cassava
    , vector
    , bytestring
    , directory
    , filepath
    , transformers
    , mtl
    , aeson
  default-language:    Haskell2010

executable tempeh
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:
      base
    , tempeh
    , text
  default-language:    Haskell2010

test-suite tempeh-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:
      base
    , tempeh
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , scientific
    , time
    , stm
    , text
    , directory
    , filepath
    , transformers
    , mtl
  other-modules:
      -- Unit Tests
      Unit.Domain.TypesTest
    , Unit.Domain.ServicesTest
    , Unit.Strategy.EmaCross.IndicatorsTest
    , Unit.Strategy.EmaCross.StrategyTest
    , Unit.Adapter.CsvDataProviderTest
    , Unit.Adapter.RiskManagerTest
      -- Integration Tests
    , Integration.BacktestIntegrationTest
      -- E2E Tests
    , E2E.CompleteBacktestTest
  default-language:    Haskell2010
