cabal-version:       2.4
name:                tempeh
version:             0.1.0.0
build-type:          Simple

library
  hs-source-dirs:      src
  exposed-modules:
    -- Domain Layer (Pure Business Logic)
      Domain.Types
    , Domain.Services.BacktestService
    , Domain.Services.LiveDataService
    , Domain.Strategy

    -- Application Layer (Orchestration & Services)
    , Application.BacktestOrchestrator
    , Application.LiveTradingOrchestrator
    , Application.ReportingService
    , Application.Env
    , Application.CLI
    , Application.Strategy.Factory
    , Application.Strategy.Registry
    , Application.Strategy.Types

    -- Adapters Layer (Infrastructure)
    , Adapter.CsvDataProvider
    , Adapter.BrokerDataProvider
    , Adapter.BacktestEngine
    , Adapter.ReportGeneratorAdapter
    , Adapter.RiskManagerAdapter
    , Adapter.IG.Types
    , Adapter.IG.Polling
    , Adapter.IG.Auth
    , Adapter.IG.Streaming
    , Adapter.IG.Deals
    , Adapter.IG.Session
    , Adapter.IG.Connection
    , Adapter.IG.Trading
    , Adapter.IG.Error
    , Adapter.IG.BrokerAdapter

    -- Strategy Implementations
    , Strategy.EmaCross
    , Strategy.RSI
    , Strategy.BollingerBands
    , Strategy.TimingTest

    -- Utilities
    , Util.Config
    , Util.Error
    , Util.Logger

  build-depends:
      base >=4.14 && <5
    , scientific
    , time
    , stm
    , text
    , cassava
    , vector
    , bytestring
    , directory
    , filepath
    , transformers
    , mtl
    , aeson
    , containers
    , http-conduit
    , http-types
    , async
    , http-client-tls
    , case-insensitive
    , websockets
    , wuss
    , network
    , uuid
    , random
  default-language:    Haskell2010

executable tempeh
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:
      base
    , tempeh
    , text
    , mtl
    , scientific
    , random
  default-language:    Haskell2010

test-suite tempeh-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:
      base
    , tempeh
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , QuickCheck
    , scientific
    , time
    , stm
    , text
    , directory
    , filepath
    , transformers
    , mtl
    , aeson
    , containers
    , temporary
    , async
    , wai
    , warp
    , http-client
    , http-client-tls
    , http-types
    , bytestring
    , websockets
    , wuss
    , network
    , uuid
    , random
  other-modules:
      -- Unit Tests
      Unit.Domain.TypesTest
    , Unit.Domain.ServicesTest
    , Unit.Domain.LiveDataServiceTest
    , Unit.Strategy.EmaCross.IndicatorsTest
    , Unit.Strategy.EmaCross.StrategyTest
    , Unit.Strategy.BollingerBands.IndicatorsTest
    , Unit.Strategy.BollingerBands.StrategyTest
    , Unit.Strategy.RSI.IndicatorsTest
    , Unit.Strategy.RSI.StrategyTest
    , Unit.Strategy.TimingTest.StrategyTest
    , Unit.Application.CLITest
    , Unit.Application.LiveTradingOrchestratorTest
    , Unit.Adapter.CsvDataProviderTest
    , Unit.Adapter.BrokerDataProviderTest
    , Unit.Adapter.RiskManagerTest
    , Unit.Adapter.BacktestEngineTest
    , Unit.Adapter.IG.PollingTest
    , Unit.Adapter.IG.StreamingTest
    , Unit.Adapter.IG.DealsTest
    , Unit.Adapter.IG.SessionTest
    , Unit.Adapter.IG.ConnectionTest
    , Unit.Adapter.IG.ErrorTest
    , Unit.Adapter.IG.TradingTest
    , Unit.Adapter.IG.BrokerAdapterTest
    , Unit.Util.ConfigTest
    , Unit.Util.ErrorTest
    , Unit.Util.LoggerTest
      -- Integration Tests
    , Integration.BacktestIntegrationTest
    , Integration.StrategyComparisonTest
    , Integration.LiveTradingIntegrationTest
    , Integration.LiveTradingExecutionTest
    , Integration.Adapter.IG.DealsIntegrationTest
      -- E2E Tests
    , E2E.CompleteBacktestTest
    , E2E.LiveTradingE2ETest
  default-language:    Haskell2010
